# zlib-ng

./: .codecov.yaml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.zlib  FAQ.zlib  INDEX  INDEX.md  Makefile.in  PORTING.md  README  README.md  README.zlib  README_RISCV.md  Readme.macos.arm64  adler32.c  adler32.cxx  adler32.h  adler32_fold.c  adler32_fold.h  adler32_p.h  chunkset.c  chunkset.h  chunkset_tpl.h  codecov.yml  compare256.c  compare256.h  compare256_rle.h  compare258.c  compare258.h  compress.c  configure  cpu_features.c  cpu_features.h  cpu_functions.h  crc32.c  crc32.h  crc32_acle.c  (+84 more)
.github/workflows/: analyze.yml  cmake-priv.yml  cmake.yml  codeql.yml  configure.yml  coverity.yml  format.yml  fuzz.yml  libpng.yml  link.yml  lint.yml  nmake.yml  pigz.yml  pkgcheck.yml  release.yml
arch/aarch64/: Makefile.in  adler32_neon.c  adler32_neon.h  armfeature.c  crc32_acle.c  crc32_armv8_le.S  fill_window_arm.c  insert_string_acle.c
arch/arm/: Makefile.in  acle_intrins.h  adler32_neon.c  adler32_neon.h  arm.h  arm_features.c  arm_features.h  arm_functions.h  armfeature.c  chunkset_neon.c  compare256_neon.c  crc32_acle.c  crc32_armv8.c  ctzl.h  fill_window_arm.c  fill_window_neon.c  insert_string_acle.c  memchunk_neon.c  neon_intrins.h  slide_hash_neon.c  slide_neon.c  update_hash_acle.c
arch/generic/: Makefile.in  adler32_fold_c.c  adler32_fold_c.h  chunk_permute_table.h  compare256_c.c  crc32_braid_c.c  crc32_fold_c.c  crc32_fold_c.h  generic_features.h  generic_functions.h  insert_string_c.c
arch/power/: Makefile.in  adler32_power8.c  adler32_vmx.c  chunkset_power8.c  compare256_power9.c  crc32_constants.h  crc32_power8.c  fallback_builtins.h  power.c  power.h  power_features.c  power_features.h  power_functions.h  slide_hash_power8.c  slide_hash_vmx.c  slide_power8.c
arch/riscv/: adler32_rvv.c  chunkset_rvv.c  compare256_rvv.c  riscv_features.c  riscv_features.h  riscv_functions.h  slide_hash_rvv.c
arch/s390/: Makefile.in  README.md  crc32-vx.c  dfltcc_common.c  dfltcc_common.h  dfltcc_deflate.c  dfltcc_deflate.h  dfltcc_detail.h  dfltcc_inflate.c  dfltcc_inflate.h  s390.c  s390.h  s390_features.c  s390_features.h  (+1 more)
cmake/: archdetect.c  archdetect.cmake  detect-arch.c  detect-arch.cmake  detect-coverage.cmake  detect-install-dirs.cmake  detect-intrinsics.cmake  detect-malloc.cmake  detect-sanitizer.cmake  run-and-compare.cmake  run-and-redirect.cmake  test-compress.cmake  test-tools.cmake  toolchain-aarch64.cmake  toolchain-arm.cmake  toolchain-mingw-i686.cmake  toolchain-mingw-x86_64.cmake  toolchain-powerpc.cmake  toolchain-powerpc64.cmake  toolchain-powerpc64le.cmake  toolchain-riscv.cmake  toolchain-s390x.cmake  toolchain-sparc64.cmake
script/: setup_modules.sh  update_submodules.sh
test/: CMakeLists.txt  CVE-2003-0107.c  CVE.py  INDEX  Makefile.in  README.md  abicheck.md  abicheck.sh  adler32_test.c  crc32_test.c  deflate_quick_bi_valid.c  deflate_quick_block_open.c  example.c  gh1235.c  hash_head_0.c  infcover.c  inflate_deflate_parametrized.c  inflateparams.c  minideflate.c  minigzip.c  pkgcheck.sh  switchlevels.c  testCVEinputs.sh  test_adler32.c  test_adler32.cc  test_aligned_alloc.cc  test_compare256.cc  test_compare256_rle.cc  test_compress.c  test_compress.cc  test_compress_bound.cc  test_crc32.c  test_crc32.cc  test_deflate_bound.c  test_deflate_bound.cc  test_deflate_concurrency.cc  test_deflate_copy.c  test_deflate_dict.c  test_deflate_dict.cc  test_deflate_hash_head_0.cc  (+27 more)
test/abi/: ignore  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-aarch64-unknown-linux-gnu.abi  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-arm-unknown-linux-gnueabi.abi  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-arm-unknown-linux-gnueabihf.abi  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-powerpc-unknown-linux-gnu.abi  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-powerpc64-unknown-linux-gnu.abi  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-powerpc64le-unknown-linux-gnu.abi  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-x86_64-pc-linux-gnu-m32.abi  zlib-ec3df00224d4b396e2ac6586ab5d25f673caa4c2-x86_64-pc-linux-gnu.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-aarch64-unknown-linux-gnu.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-arm-unknown-linux-gnueabi.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-arm-unknown-linux-gnueabihf.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-powerpc-unknown-linux-gnu.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-powerpc64-unknown-linux-gnu.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-powerpc64le-unknown-linux-gnu.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-x86_64-pc-linux-gnu-m32.abi  zlib-ng-1ab443812aceab6c80ccd573ecdd06f73a84eef4-x86_64-pc-linux-gnu.abi  zlib-ng-2.0.0-x86_64-pc-linux-gnu.abi  zlib-ng-843c16c87afd53a20bf915661012b02acdd30281-x86_64-pc-linux-gnu.abi  zlib-v1.2.11-arm-linux-gnueabihf.abi  zlib-v1.2.11-x86_64-linux-gnu.abi  zlib-v1.2.12-x86_64-pc-linux-gnu.abi
test/bench/: chromium_zlib_bench.cc
test/benchmarks/: CMakeLists.txt  README.md  benchmark_adler32.cc  benchmark_adler32_copy.cc  benchmark_compare256.cc  benchmark_compare256_rle.cc  benchmark_compress.cc  benchmark_crc32.cc  benchmark_main.cc  benchmark_png_shared.h  benchmark_slidehash.cc  benchmark_update_hash.cc
test/cmake/: compress-and-verify.cmake  test-data.cmake  test-issues.cmake  test-tools.cmake  toolchain-aarch64.cmake  toolchain-arm.cmake
test/fuzz/: CMakeLists.txt  checksum_fuzzer.c  compress_fuzzer.c  example_dict_fuzzer.c  example_flush_fuzzer.c  example_large_fuzzer.c  example_small_fuzzer.c  fuzzer_checksum.c  fuzzer_example_dict.c  fuzzer_example_flush.c  fuzzer_example_small.c  fuzzer_minigzip.c  minigzip_fuzzer.c  standalone_fuzz_target_runner.c
test/pigz/: CMakeLists.txt
tools/: codecov-upload.sh  config.sub  makecrct.c  makefixed.c  maketrees.c
win32/: DLL_FAQ.txt  Makefile.a64  Makefile.arm  Makefile.gcc  Makefile.msc  README-WIN32.txt  depcheck.cpp  zlib-ng.def  zlib-ng.def.in  zlib-ng1.rc  zlib.def.in  zlib1.rc  zlibcompat.def.in
(+65 files in other folders)
